layout bugfix for ccm.cloze.js

--- a/cloze/resources/default.css
+++ b/cloze/resources/default.css
@@ -74,8 +74,6 @@ button:disabled {
 
 .gap {
   font-size: 0;
-  padding-left: 0;
-  padding-right: 0.3rem;
 }
 
 .gap input {
